Almost features added

--- a/src/main/resources/templates/about.html
+++ b/src/main/resources/templates/about.html
@@ -1,21 +1,13 @@
 <!DOCTYPE html>
-<html lang="en" xmlns:th="http://www.thymeleaf.org">
+<html lang="en" xmlns:th="http://www.thymeleaf.org" xmlns:sec="http://www.thymeleaf.org/extras/spring-security">
 <head>
     <meta charset="UTF-8">
     <title>About Us - Skillspace</title>
     <link rel="stylesheet" th:href="@{/css/style.css}">
 </head>
 <body>
-    <nav class="navbar">
-         <a href="/dashboard" class="logo">Skillspace</a>
-         <ul class="nav-links">
-             <li><a th:href="@{/dashboard}">Home</a></li>
-             <li><a th:href="@{/gigs/my-gigs}">My Gigs</a></li> <li><a th:href="@{/about}">About</a></li>
-             <li>
-                 <form th:action="@{/logout}" method="post"><button type="submit" class="logout-button">Logout</button></form>
-             </li>
-         </ul>
-    </nav>
+    <div th:replace="~{fragments/navbar :: navbar}"></div>
+
     <div class="container">
         <h1>About Skillspace</h1>
         <p>Welcome to Skillspace, the premier platform connecting talented freelancers with clients who need their skills. Our initiative is to create a seamless and trustworthy environment for collaboration.</p>
