--- a/src/main/resources/templates/create-gig.html
+++ b/src/main/resources/templates/create-gig.html
@@ -1,20 +1,12 @@
 <!DOCTYPE html>
-<html lang="en" xmlns:th="http://www.thymeleaf.org">
+<html lang="en" xmlns:th="http://www.thymeleaf.org" xmlns:sec="http://www.thymeleaf.org/extras/spring-security">
 <head>
     <meta charset="UTF-8">
     <title>Create New Gig - Skillspace</title>
     <link rel="stylesheet" th:href="@{/css/style.css}">
 </head>
 <body>
-    <nav class="navbar">
-        <a href="/dashboard" class="logo">Skillspace</a>
-        <ul class="nav-links">
-            <li><a th:href="@{/dashboard}">Home</a></li>
-            <li><a th:href="@{/gigs/my-gigs}">My Gigs</a></li>
-            <li><a th:href="@{/about}">About</a></li>
-            <li><form th:action="@{/logout}" method="post"><button type="submit" class="logout-button">Logout</button></form></li>
-        </ul>
-    </nav>
+    <div th:replace="~{fragments/navbar :: navbar}"></div>
 
     <div class="container">
         <div class="form-container" style="max-width: 600px;">
