--- a/src/main/resources/templates/my-gigs.html
+++ b/src/main/resources/templates/my-gigs.html
@@ -1,20 +1,12 @@
 <!DOCTYPE html>
-<html lang="en" xmlns:th="http://www.thymeleaf.org">
+<html lang="en" xmlns:th="http://www.thymeleaf.org" xmlns:sec="http://www.thymeleaf.org/extras/spring-security">
 <head>
     <meta charset="UTF-8">
     <title>My Gigs - Skillspace</title>
     <link rel="stylesheet" th:href="@{/css/style.css}">
 </head>
 <body>
-    <nav class="navbar">
-        <a href="/dashboard" class="logo">Skillspace</a>
-        <ul class="nav-links">
-            <li><a th:href="@{/dashboard}">Home</a></li>
-            <li><a th:href="@{/gigs/my-gigs}">My Gigs</a></li>
-            <li><a th:href="@{/about}">About</a></li>
-            <li><form th:action="@{/logout}" method="post"><button type="submit" class="logout-button">Logout</button></form></li>
-        </ul>
-    </nav>
+    <div th:replace="~{fragments/navbar :: navbar}"></div>
 
     <div class="container">
         <div style="display: flex; justify-content: space-between; align-items: center;">
@@ -30,8 +22,14 @@
                 <div class="gig-card-content">
                     <h3 th:text="${gig.title}">Gig Title</h3>
                     <p class="price" th:text="'$' + ${gig.price}">$50.00</p>
-                    <p><em>(This is one of your gigs)</em></p>
-                    </div>
+                    
+                    <form th:action="@{/gigs/delete/{id}(id=${gig.id})}" method="post" style="margin-top: 15px;">
+                        <button type="submit" class="btn btn-danger" 
+                                onclick="return confirm('Are you sure you want to delete this gig? This action cannot be undone.')">
+                            Delete
+                        </button>
+                    </form>
+                </div>
             </div>
         </div>
     </div>
